fix error page spacing; fix Link usages

--- a/src/components/templates/andNavigation.module.scss
+++ b/src/components/templates/andNavigation.module.scss
@@ -49,11 +49,6 @@
 }
 
 @media (min-width: $breakpoint-lg) {
-	.content {
-		display: flex;
-		flex-direction: column;
-	}
-
 	.searchBox.searchBox {
 		display: inherit;
 	}
